fix(ui): gear5 is hidden on mobile

--- a/src/styles/gears.css
+++ b/src/styles/gears.css
@@ -45,6 +45,6 @@
 }
 @media (max-width: 800px) {
   .gear5 {
-    display: hidden;
+    display: none;
   }
 }
